Test image change

--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                 <p>
                     Lo que comenzó en 1998 como un patio abierto para los niños que lustraban zapatos en el parque de Jarabacoa, hoy es un compromiso de por vida con la educación. A través de los clubes Timothy y Priscilla y un fondo de becas universitarias, la Fundación Fieles e Idóneos acompaña a jóvenes hacia la universidad con valores cristianos.
                 </p>
-                <img src="https://images.unsplash.com/photo-1497486751825-1233686d5d80?w=800&q=80" alt="Niños del Timothy Club en Jarabacoa" class="mission-image">
+                <img src="fieles_e_idoneos_photo_1.jpg" alt="Niños del Timothy Club en Jarabacoa" class="mission-image">
             </div>
         </div>
     </section>
